syntax = "proto3";
option go_package = "github.com/eran-levy/tokenizer-gophercon/pkg/proto/tokenizer";
package tokenizer;

message TokenizePayloadRequest {
    string global_tx_id = 1;
    string user_id = 2;
    string organization_id = 3;
    string text = 4;
}

message TokenizePayloadReresponse {
    string global_tx_id = 1;
    repeated string tokenized_text = 2;
    string language = 3;
}
service Tokenizer {
    rpc GetTokens (TokenizePayloadRequest) returns (TokenizePayloadReresponse) {
    }
}